# ProjetGo

./: CMakeLists.txt  main.cpp
GOProject/: AlGo.cpp  AlGo.h  CMakeLists.txt  Image.h  ImageLoader.cpp  ImageLoader.h  ImageLoaderHoughLines.cpp  ImageLoaderPion.cpp  ImageLoaderRectangleDetection.cpp  PerspectiveFinder.cpp  PerspectiveFinder.h  Utils.cpp  Utils.h
