CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_MODULE_PATH $ENV{OPENCV_DIR})
FIND_PACKAGE(OpenCV REQUIRED)
PROJECT(AugmentedGO)

ADD_SUBDIRECTORY(GOProject)

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/GOProject)

ADD_EXECUTABLE(GOProjectTest main.cpp)
TARGET_LINK_LIBRARIES(GOProjectTest ${OpenCV_LIBS} GOProject)
